--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -51,6 +51,19 @@ main section.categories-show {
         font-size: 0.8em;
       }
 
+      .soldout {
+        position: absolute;
+        top: 0;
+        left: 0;
+        padding: 10px;
+        color: white;
+        opacity: 0.5;
+        background-color: rgb(191, 0, 0);
+        border-top-left-radius: 4px;
+        border-bottom-right-radius: 20px;
+        font-size: 0.8em;
+      }
+
       &:hover {
 
         border-color: #999;
