--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -24,6 +24,33 @@
           <dd><%= @product.price %></dd>
         </dl>
       </div>
+
+    </div>
+      <% if current_user %>
+        <div class="row">
+          <h3>Add a Review:</h3>
+
+          <%= form_for([@product, @product.reviews.build]) do |f| %>
+            <p>
+              <%= f.label :description %>:<br/>
+              <%= text_area_tag 'description' %>
+            </p>
+            <p>
+              <%= f.label :rating %>:
+              <%= select_tag "rating", raw("<option>0</option><option>1</option><option>2</option><option>3</option><option>4</option><option>5</option>") %>
+            </p>
+            <p>
+              <%= f.submit %>
+            </p>
+          <% end %>
+        </div>
+      <% end %>
+    <div class="row">
+
+
+      <h3><%= pluralize @reviews.length, 'Customer Review' %>:</h3>
+      <%= render @reviews %>
+
     </div>
 
   </article>
