Fix styling and add bootstrap classes

--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -84,6 +84,11 @@ main section.products-show {
       max-width: 100%;
     }
   }
+  .review span {
+    font-style: italic;
+  }
+  .row {
+    margin-left: 15px;
+    margin-right: 15px;
+  }
 }
-
-
