--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -33,14 +33,14 @@
           <%= form_for([@product, @product.reviews.build]) do |f| %>
             <p>
               <%= f.label :description %>:<br/>
-              <%= text_area_tag 'description' %>
+              <%= text_area_tag 'description', "", class: 'form-control' %>
             </p>
             <p>
               <%= f.label :rating %>:
               <%= select_tag "rating", raw("<option>0</option><option>1</option><option>2</option><option>3</option><option>4</option><option>5</option>") %>
             </p>
             <p>
-              <%= f.submit %>
+              <%= f.submit 'Create Review', class: 'btn btn-primary'%>
             </p>
           <% end %>
         </div>
