--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -45,9 +45,9 @@
               data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
               data-amount="<%= cart_subtotal_cents %>"
               data-name="Jungle"
-              data-description="Khurram Virani's Jungle Order"
+              data-description="Your Jungle Order"
               data-locale="auto"
-              data-email="kvirani@gmail.com"
+              data-email="example@gmail.com"
               data-currency="cad">
             </script>
           <% end %>
