--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -8,6 +8,12 @@
   <p class="description">
     <%= product.description %>
   </p>
+  <p class="rating">
+    Average Rating: <%= @average_rating %>/5
+  </p>
+  <p class="reviews text-muted">
+    <%= pluralize product.reviews.length, 'Customer Review' %>
+  </p>
   <footer class="actions">
     <%= button_to add_item_cart_path(product_id: product.id), class: 'btn btn-primary' , method: :post do %>
       <%= fa_icon "shopping-cart", text: 'Add' %>
