--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -45,9 +45,14 @@
               data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
               data-amount="<%= cart_subtotal_cents %>"
               data-name="Jungle"
+              <% if current_user %>
+              data-description="<%= pluralize current_user.first_name, "'s" %> Jungle Order"
+              data-email="<%= current_user.email %>"
+              <% else %>
               data-description="Your Jungle Order"
-              data-locale="auto"
               data-email="example@gmail.com"
+              <% end %>
+              data-locale="auto"
               data-currency="cad">
             </script>
           <% end %>
