--- a/app/views/orders/_item.html.erb
+++ b/app/views/orders/_item.html.erb
@@ -1,19 +1,19 @@
 <tr>
   <td>
-    <%= image_tag product.image.tiny %>
+    <%= image_tag line_item.product.image.tiny %>
   </td>
   <td>
-    <h4><%= product.name %></h4>
+    <h4><%= line_item.product.name %></h4>
     <br>
-    <p><%= product.description %></p>
+    <p><%= line_item.product.description %></p>
   </td>
   <td>
-    <%= product.price %>
+    <%= line_item.item_price_cents / 100.0 %>
   </td>
   <td>
-    <%= quantity %>
+    <%= line_item.quantity %>
   </td>
   <td>
-    <%= product.price * quantity %>
+    <%= line_item.total_price_cents / 100.0 %>
   </td>
 </tr>
