--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -12,23 +12,23 @@
   <% end %>
 
   <div class="form-group">
-    <%= f.label :first_name %><br>
+    <%= f.label :first_name %><span>*</span><br>
     <%= f.text_field :first_name, class: 'form-control' %>
   </div>
   <div class="form-group">
-    <%= f.label :last_name %><br>
+    <%= f.label :last_name %><span>*</span><br>
     <%= f.text_field :last_name, class: 'form-control' %>
   </div>
   <div class="form-group">
-    <%= f.label :email %><br>
+    <%= f.label :email %><span>*</span><br>
     <%= f.text_field :email, class: 'form-control' %>
   </div>
   <div class="form-group">
-    <%= f.label :password %><br>
+    <%= f.label :password %><span>*</span><br>
     <%= f.password_field :password, class: 'form-control' %>
   </div>
   <div class="form-group">
-    <%= f.label :password_confirmation %><br>
+    <%= f.label :password_confirmation %><span>*</span><br>
     <%= f.password_field :password_confirmation, class: 'form-control' %>
   </div>
   <div class="actions">
