--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -27,16 +27,15 @@
         </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-           <% if current_user %>
-           <li><div class="logged-in">Signed in as <%= current_user.first_name %><div><li>
-           <li><%= link_to "Logout", '/logout' %></li>
-           <% else %>
-           <li><%= link_to 'Login', '/login' %></li>
-           <li><%= link_to 'Register', '/users/new' %></li>
-           <% end %>
-       <li class="dropdown">
+        <% if current_user %>
+          <li><div class="logged-in">Signed in as <%= current_user.first_name %><div><li>
+          <li><%= link_to "Logout", '/logout', method: :post %></li>
+        <% else %>
+          <li><%= link_to 'Login', '/login' %></li>
+          <li><%= link_to 'Register', '/users/new' %></li>
+        <% end %>
+        <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-
             <span class="text-danger"><%= fa_icon 'lock', text: 'Admin' %></span>
             <span class="caret"></span>
           </a>
