--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -28,7 +28,7 @@
               ORDER TOTAL:
             </th>
             <th>
-              <%= @order.total_cents / 100.0 %>
+              $<%= @order.total_cents / 100.0 %>
             </th>
           </tr>
         </tfoot>
